--- a/app/globals.css
+++ b/app/globals.css
@@ -39,3 +39,11 @@ body {
   background-color: var(--hover);
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE/Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
