Aded filter button on draws page

--- a/components/ImmigrationNews.module.css
+++ b/components/ImmigrationNews.module.css
@@ -432,3 +432,10 @@ cardBack .footer {
   transform: translateY(0);
   opacity: 0.95;
 }
+
+.cardFlipper.swipingLeft {
+  transform: rotateY(-30deg) !important;
+}
+.cardFlipper.swipingRight {
+  transform: rotateY(30deg) !important;
+}
